--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,18 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="red_trasparent">#66DDCCDD</color>
+    <color name="indigo">#536DFE</color>
+    <color name="blue">#90CAF9</color>
+    <color name="purple">#D1C4E9</color>
+    <color name="trasparent">#F5F5F5</color>
+    <color name="trasparent1">#E0E0E0</color>
+    <color name="teal100">#B2DFDB</color>
+    <color name="teal">#26A69A</color>
+    <color name="cyan500">#00BCD4</color>
+    <color name="yellow100">#FFF9C4</color>
+    <color name="white">#FFFFFF</color>
+    <color name="cyan700">#0097A7</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
