--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="blue">#90CAF9</color>
     <color name="purple">#D1C4E9</color>
     <color name="trasparent">#F5F5F5</color>
-    <color name="trasparent1">#E0E0E0</color>
+    <color name="trasparent_1">#E0E0E0</color>
     <color name="teal100">#B2DFDB</color>
     <color name="teal">#26A69A</color>
     <color name="cyan500">#00BCD4</color>
