--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,17 +22,41 @@
         android:background="@color/cyan500"
         android:layout_marginTop="128dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp" />
+
+    <TextView
+        android:text="@string/quiz_svolti_textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/quiz_svolti"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="50dp" />
 
     <Button
         android:text="Quiz 30 domande"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/startButton30"
+        android:background="@color/cyan500"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:background="@color/red_trasparent"
-        android:layout_marginTop="149dp"
-        android:layout_below="@+id/startButton20"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginBottom="77dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_above="@+id/quiz_svolti"
+        android:layout_alignStart="@+id/startButton20" />
+
+    <Button
+        android:text="Profilo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/startButton20"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="32dp"
+        android:id="@+id/button" />
 
 </RelativeLayout>
