--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -11,53 +11,6 @@
     tools:context="com.example.pier.dirittoprivato.TestActivity">
 
 
-    <TextView
-        android:text="domanda"
-        android:layout_width="@dimen/textview_width"
-        android:layout_height="@dimen/textview_height"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp"
-        android:id="@+id/Domanda" />
-
-    <TextView
-        android:text="B) R2"
-        android:layout_width="@dimen/textview_width"
-        android:layout_height="@dimen/textview_height"
-        android:id="@+id/rx2"
-        android:layout_below="@+id/rx1"
-        android:layout_alignStart="@+id/rx1"
-        android:layout_marginTop="44dp" />
-
-    <TextView
-        android:text="C) R3"
-        android:layout_width="@dimen/textview_width"
-        android:layout_height="35dp"
-        android:id="@+id/rx3"
-        android:layout_below="@+id/rx2"
-        android:layout_alignStart="@+id/rx2"
-        android:layout_marginTop="40dp" />
-
-    <TextView
-        android:text="D) R4"
-        android:layout_width="@dimen/textview_width"
-        android:layout_height="@dimen/textview_height"
-        android:id="@+id/rx4"
-        android:layout_marginTop="38dp"
-        android:layout_below="@+id/rx3"
-        android:layout_alignEnd="@+id/rx2" />
-
-    <TextView
-        android:text="A) R1"
-        android:layout_width="@dimen/textview_width"
-        android:layout_height="@dimen/textview_height"
-        android:layout_marginTop="33dp"
-        android:id="@+id/rx1"
-        android:layout_below="@+id/Domanda"
-        android:layout_alignStart="@+id/Domanda"
-        />
-
     <Button
         android:text="D"
         android:layout_width="wrap_content"
@@ -98,4 +51,56 @@
         android:layout_above="@+id/btC"
         android:layout_alignStart="@+id/btC"
         android:backgroundTint="@color/teal100"/>
+
+
+
+
+
+    <TextView
+        android:text="domanda"
+        android:layout_width="@dimen/textview_width"
+        android:textStyle="bold"
+        android:layout_marginTop="15dp"
+        android:id="@+id/Domanda"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_height="75dp" />
+
+    <TextView
+        android:text="B) R2"
+        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/textview_width"
+        android:id="@+id/rx2"
+        android:layout_height="85dp"
+        android:layout_below="@+id/rx1"
+        android:layout_alignStart="@+id/rx1" />
+
+    <TextView
+        android:text="D) R4"
+        android:layout_marginTop="10dp"
+        android:layout_width="@dimen/textview_width"
+        android:id="@+id/rx4"
+        android:layout_height="75dp"
+        android:layout_below="@+id/rx3"
+        android:layout_alignStart="@+id/rx3" />
+
+    <TextView
+        android:text="C) R3"
+        android:layout_marginTop="11dp"
+        android:layout_width="@dimen/textview_width"
+        android:id="@+id/rx3"
+        android:layout_height="85dp"
+        android:layout_below="@+id/rx2"
+        android:layout_alignStart="@+id/rx2" />
+
+    <TextView
+        android:textSize="@dimen/font_size"
+        android:text="A) R1"
+        android:layout_width="@dimen/textview_width"
+        android:layout_marginTop="10dp"
+        android:id="@+id/rx1"
+        android:layout_height="85dp"
+        android:layout_below="@+id/Domanda"
+        android:layout_alignStart="@+id/Domanda" />
+
 </RelativeLayout>
