--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,9 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.pier.dirittoprivato.MainActivity">
     <item
-        android:visible="false"
+        android:visible="true"
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/profilo"
+        android:enabled="true"
+        android:checkable="false"
+        />
 </menu>
