--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,13 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.pier.dirittoprivato.MainActivity">
+    tools:context="com.example.pier.dirittoprivato.MainActivity"
+    android:id="@+id/menu">
+
     <item
-        android:visible="true"
+        android:visible="false"
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/profilo"
-        android:enabled="true"
+        android:enabled="false"
         android:checkable="false"
         />
 </menu>
