--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -50,4 +50,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/startButton30" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@mipmap/user_64"
+        android:background="@color/trasparent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="41dp"
+        android:id="@+id/floatingActionButton3"
+        android:onClick="startProfileActivity"
+        app:backgroundTint="@color/white" />
+
+
 </RelativeLayout>
