--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="teal">#26A69A</color>
     <color name="cyan500">#00BCD4</color>
     <color name="yellow100">#FFF9C4</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
     <color name="cyan700">#0097A7</color>
 
     <color name="black_overlay">#66000000</color>
